tests/paczka1/fuzzy1/67114991.err
Error in line 1: VtQ A231 73,7
Error in line 13: iCW A231 84,3
Error in line 10: WuB5ViSLouK A231 96,2
Error in line 25: WuB5ViSLouK A143 54,1
Error in line 15: VtQ A231 5,4
Error in line 35: nspvH1fUB A231 55,7
Error in line 31: VtQ S81 7,3
